--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.19.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.3.1",
+    "flutterwave-node-v3": "^1.1.10",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
     "html-to-text": "^9.0.5",
